syntax = "proto3";

package entityPackage;

service Entity {
    rpc createEntity(EntityItem) returns (EntityItem);
    rpc readEntities(voidNoParam) returns (EntityItems);
    rpc readEntitiesStream(voidNoParam) returns (stream EntityItem);
}

message voidNoParam {}

message EntityItem {
    int32 id = 1;
    string text = 2;
}

message EntityItems {
    repeated EntityItem items = 1;
}